--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -111,6 +111,10 @@ input {
   margin-left: 40px;
 }
 
+.far fa-question-circle {
+  color: #0171bd;
+}
+
 /*__________________Navigationsleiste klein___________________*/
 
 @media all and (max-width: 968px) {
@@ -435,6 +439,7 @@ i:hover {
     overflow-wrap: break-word;
     background: none;
     border: none;
+    margin: 5px;
 }
 .hidden {
     visibility: hidden;
@@ -499,5 +504,28 @@ i:hover {
     left: 870px;
 }
 
+.pulse{ 
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;
+ 
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.3);}
+  100% { transform: scale(1); }
+  }
+
+  .pulse-light{ 
+    animation: pulse-light 1s infinite;
+    animation-timing-function: linear;
+   
+  }
+  
+  @keyframes pulse-light {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05);}
+    100% { transform: scale(1); }
+    }
 
   
