--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,7 +141,7 @@ audio {
 }
 
 p {
-  font-size: 15px;
+  font-size: 35px;
   font-weight: 500;
 }
 
@@ -155,6 +155,7 @@ fieldset {
 
 .final {
   width: 100%;
+  max-height: 500px;
   min-height: 35em;
   min-width: 35em;
   display: block;
@@ -162,6 +163,9 @@ fieldset {
   border-radius: 4px;
   padding: 2em;
   background-color: white;
+  overflow-y: auto;
+  
+  
 }
 
 textarea {
