--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -123,6 +123,7 @@ audio {
   border-radius: 8px;
   border: 5px solid #0171bd ;
   width: 200%;
+  margin-top: 10px;
 }
 
 .audiobar {
@@ -303,9 +304,14 @@ body.dark {
   background: #2a2a2a;
   transition: 0.2s;
 }
+details.dark {
+  color: #f3f3f3;
+}
 
 .darkmode {
   padding-left: -230px;
+  position: relative;
+  padding-top: 80px;
 }
 
 .darkbuttons {
