--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -57,12 +57,14 @@
     </nav>
 
       <fieldset>
-        <div class="audiobar">
-          <audio controls id="myAudio" autoplay></audio>
-          <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
-          <div class= "custom-text" id="custom-text">No file chosen, yet.</div>
-        </div>
-
+        <details>
+          <summary>Audio-Datei</summary>
+          <div class="audiobar">
+            <audio controls id="myAudio" autoplay></audio>
+            <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
+            <div class= "custom-text" id="custom-text">No file chosen, yet.</div>
+          </div>
+        </details>
       <div id="final" class="final" ></div>
       <div id="editor"></div>
       <br />
