--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -58,7 +58,7 @@
 
       <fieldset>
         <details>
-          <summary>Audio-Datei</summary>
+          <summary id="summary">Audio-Datei</summary>
           <div class="audiobar">
             <audio controls id="myAudio" autoplay></audio>
             <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
