--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -136,7 +136,7 @@ audio {
   margin-top: -35px;
   margin-left: -360px;
   position: relative;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 audio::-webkit-media-controls-panel{
@@ -255,12 +255,11 @@ textarea {
 
 .checkbox {
   opacity: 0;
-  position: absolute;
 }
 
 .label {
   margin-left: 30px;
-  margin-top: -880px;
+  margin-top: -900px;
   background-color: #999;
   border-radius: 50px;
   cursor: pointer;
@@ -319,6 +318,10 @@ details.dark {
 }
 
 .darkAudioText {
+  color: white;
+}
+
+.darkSummary{
   color: white;
 }
 
