--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -56,7 +56,9 @@
     <div class="anleitung hidden">
           <button class="far fa-times-circle" id="closeAnleitung"></button>
           <div id="wrapper-anleitung">
-          <img id="anleitung-1" src="/src/assets/anleitung-1.png">
+          <img class="anleitung-1" src="/src/assets/anleitung-speechie-1.png">
+          <img class="anleitung-1" src="/src/assets/anleitung-speechie-2.png">
+          <img class="anleitung-1" src="/src/assets/anleitung-speechie-3.png">
           </div>  
     </div>
      
