--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -42,7 +42,7 @@
         </li>
         <li><a href="#">Kontakt</a></li>
         <li><a id="tutorial" href="#" onclick="startTutorial()">Tutorial</a></li>
-        <li><a href="#" id="openHelp"><i class="far fa-question-circle"></i></a></li>     
+        <li><div id="help-pulse"><a href="#" id="openHelp"><i class="far fa-question-circle"></i></a></div></li>     
       </ul>
       <div class="logo">
         <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Speech_API/Using_the_Web_Speech_API"><img class="mdn-logo" src="../assets/MDN_Web_Docs.svg.png"/></a>
