--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -454,6 +454,18 @@ details.dark {
     100% { transform: scale(1); }
     }
 
+  .pulse-heavy{ 
+      animation: pulse-heavy 1s infinite;
+      animation-timing-function: linear;
+     
+    }
+    
+  @keyframes pulse-heavy {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.5);}
+      100% { transform: scale(1); }
+      }
+
 .anleitung {
   width: 50%;
   height: 50%;
