--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -56,9 +56,9 @@
     <div class="anleitung hidden">
           <button class="far fa-times-circle" id="closeAnleitung"></button>
           <div id="wrapper-anleitung">
-          <img class="anleitung-1" src="/src/assets/anleitung-speechie-1.png">
-          <img class="anleitung-1" src="/src/assets/anleitung-speechie-2.png">
-          <img class="anleitung-1" src="/src/assets/anleitung-speechie-3.png">
+          <img class="anleitung-1" src="./src/assets/anleitung-speechie-1.png">
+          <img class="anleitung-1" src="./src/assets/anleitung-speechie-2.png">
+          <img class="anleitung-1" src="./src/assets/anleitung-speechie-3.png">
           </div>  
     </div>
      
@@ -116,7 +116,7 @@
     </div>
 
     <div id="roboter" class="hidden">
-      <img id="speechie-robot" src="/src/assets/Spechie-roboter.svg" />
+      <img id="speechie-robot" src="./src/assets/Spechie-roboter.svg" />
       <div id="text-area">
         <p id="info-text">
           Hi ich bin Spexter, ich zeig dir wie meine Welt transkribiert!
